--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 nguage: node_js
 node_js:
-    - "node"
+  - "node"
 
 after_script:
-    - gitbook build
-    - cd ./_book
-    - git init
-    - git config user.name "${USER_NAME}"
-    - git config user.email "${USER_EMAIL}"
-    - git add .
-    - git commit -m "publish gitbook"
-    - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
+  - gitbook install
+  - gitbook build
+  - grunt minify
+  - cd ./_book
+  - git init
+  - git config user.name "${USER_NAME}"
+  - git config user.email "${USER_EMAIL}"
+  - cp ../CNAME .
+  - git add .
+  - git commit -m "publish gitbook"
+  - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
 
 branches:
-    only:
-      - master
+  only:
+    - master
