--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "ibook",
   "version": "1.0.0",
-  "description": "",
+  "description": "在线电子书,这是一个GitBook自动化构建的Demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "niuyuxin123",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/niuyuxin123/ibook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/niuyuxin123/ibook/issues"
+  },
+  "homepage": "https://github.com/niuyuxin123/ibook#readme",
+  "devDependencies": {
+    "gitbook-cli": "^2.3.2"
+  }
 }
